# uidom

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/: api.py  document.py  index.py  routes.py  server.py  settings.py  tailwindcss.py
apps/app/: btn.html  login.py  route.py
apps/assets/: tailwind.config.js
demosite/: api.py  app.py  document.py  index.py  main.py  routes.py  search.py  server.py  settings.py  tailwindcss.py  template.py
demosite/_wip/: __init__.py  _states.py
demosite/app/: route.py
demosite/app/login/: route.py
demosite/assets/: tailwind.config.js  tailwind.css
demosite/pages/: __init__.py  card.py  carousel.py  chart.py  chart2.py  check_alpine.py  check_component.py  check_markdown.py  counter.py  datepicker.py  header.py  modal.py  nav.py  search.py  testimonial.py  toast.py
demosite/sellers/: route.py
demosite/sellers/retailers/: product.py  route.py
demosite/sellers/wholesellers/: route.py
demosite/sellers/{dashboard}/: route.py
demosite/webassets/: tailwind.config.js  tailwind.css
tests/: test_uidom.py
uidom/: __init__.py
uidom/alpinejs/: __init__.py  dataset.py  ripple_btn.py
uidom/arel/data/: client.js
uidom/asgi_plugs/: asgi_header.py
uidom/cli/: __init__.py  _cli.py  cli.py
uidom/components/: __init__.py  accordian.py
uidom/components/alpinejs/: __init__.py  slot_element.py  web_component_slot.py
uidom/components/atoms/: __init__.py  toggle.py  xlinks.py
uidom/contrib/: __init__.py
uidom/dom/: __init__.py  css.py  html_to_dom.py  htmldocument.py  htmlelement.py  icons.py  jinja.py  links.py  ui.py  uniqueid.py  vueloader.py  vuetify.py  xcomponent_js.py  xshadowcomponent.py
uidom/dom/elements/: booleans.py  buttons.py  chars.py  dates.py  enums.py  floats.py  integers.py
uidom/dom/src/: __init__.py  component.py  csstags.py  dom1core.py  dom_tag.py  ext.py  html_string.py  htmltags.py  jinjatags.py  main.py  parse_html.py  pythontags.py  socket_adapter.py  sphinxtags.py  string_to_element.py  (+4 more)
uidom/edge_db/: ql.py
uidom/elements/: __init__.py  booleans.py  buttons.py  chars.py  dates.py  enums.py  floats.py  integers.py
uidom/examples/: toggle.py
uidom/htmx/: __init__.py  middleware.py
uidom/reloader/: __init__.py  _app.py  _models.py  _types.py
uidom/response/: __init__.py  starlette.py  starlette_response.py
uidom/routing/: __init__.py  fastapi.py
uidom/scripts/: __init__.py  cdn.py  html_element.js  xcomponent.js
uidom/settings/: __init__.py  commands.py  document.py  initialiser.py  paths.py
uidom/slots/: __init__.py  custom_element_slot.py  slots.py  web_component_slot.py
uidom/utils/: functional.py  logger.py  parameters.py
uidom/web_io/: __init__.py  _adapter.py  _events.py  _protocol.py  _types.py  base.py
(+54 files in other folders)
