[tool.poetry]
name = "uidom"
version = "0.2"
description = "HTML library"
authors = ["bitplorer <bitplorer@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
valio = "^0.1.0-beta.5"
pyparsing = "^3.0.9"

[tool.poetry.group.dev.dependencies]
black = "^21.6b0"
mypy = "^0.942"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
starlette = "0.19.1"
fastapi = "^0.79.0"
watchgod = "^0.8.2"
pytailwindcss = "^0.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
toml = "^0.10.2"
types-toml = "^0.10.8"

[tool.poetry.scripts]
demosite = "demosite.server:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
