[tool.poetry]
name = "uidom"
version = "0.4a11"
description = "HTML library"
authors = ["bitplorer <bitplorer@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.0.1"
valio = "^0.1.0-beta.5"
marko = "^1.3.0"
anyio = "^3.6.2"
typer = "^0.9.0"

# Dependencies below are required for devtools only
pytailwindcss = { version = ">=0.1.4", optional = true }
watchgod = { version = ">=0.8.2", optional = true }
uvicorn = {extras = ["standard"], version = "^0.18.2", optional = true }
fastapi = { version = ">=0.103.1", optional = true }


[tool.poetry.extras]
dev = ["pytailwindcss", "watchgod", "uvicorn"]
fastapi = ["fastapi", "uvicorn"]
fastapidev = ["fastapi", "uvicorn", "pytailwindcss", "watchgod"]

[tool.poetry.group.dev.dependencies]
black = "^21.6b0"
mypy = "^0.942"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
starlette = "^0.27.0"
fastapi = "^0.103.1"
watchgod = "^0.8.2"
pytailwindcss = "^0.1.4"
deptry = "^0.11.0"
pipdeptree = "^2.7.1"
python-multipart = "^0.0.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
toml = "^0.10.2"
types-toml = "^0.10.8"

[tool.poetry.scripts]
uidom = "uidom.cli:uidom"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
